<resources>
    <string name="tap_here_to_start_selecting_photos">Tap here to start selecting photos</string>
    <string name="only_alphabet_allowed">Only alphabets are allowed.</string>
    <string name="must_contain_10_digit">Must contains 10 digits.</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="home_inst">Follower\'s post will\nappear here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_cant_be_empty">Field can\'t be empty.</string>
    <string name="forgotten_password">Forgotten Password ?</string>
    <string name="create_new_account">Create new account</string>
    <string name="date_of_birth_format">%1$d-%2$d-%3$d</string>
    <string name="invalid_email">Invalid email id.</string>
    <string name="update_picture">Update picture</string>
    <string name="select_photos">Select Photos</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username_imp">Username*</string>
    <string name="password_imp">Password*</string>
    <string name="first_name">First name</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="app_name">SociableX</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_and_login">Sign up and login</string>
    <string name="bio">Bio</string>
    <string name="last_name">Last name</string>
    <string name="save_changes">Save Changes</string>
    <string name="login">Login</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="app_logo">App logo</string>
    <string name="no_user_found">No user found.</string>
    <string name="add_description">Add description</string>
    <string name="post">Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
    <string name="tag_people">Tag people</string>
    <string name="saved_posts">Saved posts</string>
    <string name="logout">Logout</string>
    <string name="logout_from_instagram">Logout from Instagram ?</string>
    <string name="add_photos">Add Photos</string>
    <string name="tags">Tags</string>
    <string name="your_tags_will_appear_here">Your tags will appear here</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_more_photos">Add more photos</string>
    <string name="clear_all">clear all</string>
    <string name="search_a_user">Search a user</string>
    <string name="notifications">Notifications</string>
    <string name="started_following_you">" started following you.  "</string>
    <string name="liked_your_post">" liked your post.  "</string>
    <string name="commented_on_your_post">" commented on your post.  "</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comments">Comments</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="uploading_photos">Uploading Photos</string>
    <string name="photos_are_being_uploaded">Photos are being uploaded …</string>
    <string name="go_to_home">Go to Home</string>
    <string name="internet_not_connected">Internet is disconnected.</string>
    <string name="internet_is_connected">Internet is connected.</string>
    <string name="you">You</string>
    <string name="message">Message</string>
    <string name="this_message_has_been_deleted">This message has been deleted.</string>
    <string name="deleteChatMenu">Delete</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="device_settings">Device settings</string>
    <string name="theme_instruction">If you choose Device settings, this app will use the mode that\'s already selected in this device settings.</string>
    <string name="biometric">Biometric</string>
    <string name="biometric_instruction">System will authenticate the user before opening SociableX on supported devices.</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="you_deleted_the_message">You deleted the message</string>
    <string name="add_location">Add location</string>
    <string name="remove_tagged_location">remove tagged location</string>
    <string name="no_images">No Images</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>