<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:id="@+id/toolbarProfileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/settings"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/theme_mode"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/customTheme">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbDeviceSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/device_settings"
                        android:textColor="@color/text_color" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbLightMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/light_mode"
                        android:textColor="@color/text_color" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbDarkMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode"
                        android:textColor="@color/text_color" />

                </RadioGroup>

                <TextView
                    android:id="@+id/darkModeDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/theme_instruction"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"

                    />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/div1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/darkModeDesc"

                    />


                <TextView
                    android:id="@+id/biometric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/biometric"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/biometricSwitch"
                    app:layout_constraintEnd_toStartOf="@+id/biometricSwitch"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/biometricSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/biometric"
                    app:layout_constraintTop_toBottomOf="@+id/div1" />


                <TextView
                    android:id="@+id/biometricDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/biometric_instruction"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/biometricSwitch" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/biometricDesc"
                    app:layout_constraintVertical_bias="0" />

                <LinearLayout
                    android:id="@+id/deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/divider2">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="8dp"
                        android:text="Delete Account Permanently"
                        android:textColor="@color/red"
                        android:textSize="16sp"
                         />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAccessibility="no"
                        android:src="@drawable/arrow_right_24"
                        app:tint="@color/red" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>