<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PostFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCreatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="4dp"
                    android:text="@string/select_photos"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:enabled="false"
                    android:text="@string/next" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="50dp"
                android:paddingEnd="20dp"
                android:paddingBottom="50dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tap_here_to_start_selecting_photos"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/add_image_photo_icon"
                    android:importantForAccessibility="no" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:scrollIndicators="bottom"
            android:scrollbars="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/addMorePhotoBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />

        <TextView
            android:id="@+id/photoCount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/addMorePhotoBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addMorePhotoBtn"
            tools:text="4 photo selected"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMorePhotoBtn"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/add_more_photos"
            android:visibility="invisible"
            app:icon="@drawable/outline_image"
            app:iconPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>