<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/handle"
                android:layout_width="40dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/bottomNavigationView_iconColor" />

            <TextView
                android:id="@+id/commentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/comments"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="#676767"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="200dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

            <LinearLayout
                android:id="@+id/commentBoxVG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:strokeColor="@color/black" />

                <EditText
                    android:id="@+id/commentBox"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_view_bg"
                    android:hint="@string/add_a_comment"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="400"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/commentButton"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/post" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

